--- a/bower.json
+++ b/bower.json
@@ -2,9 +2,8 @@
   "name": "init.css",
   "version": "1.0.0",
   "main": "init.css",
-  "author": "Timur Fayzrakhmanov <hangglide.only@gmail.com>",
+  "author": "Timur Fayzrakhmanov <timfayz.only@gmail.com>",
   "ignore": [
-    "index.html",
     "data/"
   ]
 }
